--- a/book-service/src/main/resources/application.yml
+++ b/book-service/src/main/resources/application.yml
@@ -23,6 +23,34 @@ spring:
 #    config:
 #      enabled: true
 server:
-  port: 8100
+  port: ${PORT}
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
 
 
+resilience4j:
+  bulkhead:
+    instances:
+      default:
+        max-concurrent-calls: 10
+  ratelimiter:
+    instances:
+      default:
+        limit-for_period: 2
+        limit-refresh-period: 10s
+  retry:
+    instances:
+      foo-bar:
+        wait-duration: 3s
+        max-attempts: 7
+        enable-exponential-backoff: false #aumenta o tempo exponencialmente
+      default:
+        max-attempts: 5
+
+springdoc:
+  show-actuator: true
+  api-docs:
+    path: book-service/v3/api-docs
