--- a/cambio-service/src/main/resources/application.yml
+++ b/cambio-service/src/main/resources/application.yml
@@ -34,3 +34,6 @@ springdoc:
   show-actuator: false
   api-docs:
     path: cambio-service/v3/api-docs
+  swagger-ui:
+    config-url: /cambio-service/v3/api-docs/swagger-config
+    url: /cambio-service/v3/api-docs
