--- a/book-service/src/main/resources/application.yml
+++ b/book-service/src/main/resources/application.yml
@@ -54,3 +54,6 @@ springdoc:
   show-actuator: true
   api-docs:
     path: book-service/v3/api-docs
+  swagger-ui:
+    config-url: /book-service/v3/api-docs/swagger-config
+    url: /book-service/v3/api-docs
